--- a/HealthMed.Web/ClientApp/package.json
+++ b/HealthMed.Web/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "musicevent",
+  "name": "healthmed",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -9,7 +9,7 @@
     "start:default": "ng serve --port 44423 --ssl --ssl-cert \"$HOME/.aspnet/https/${npm_package_name}.pem\" --ssl-key \"$HOME/.aspnet/https/${npm_package_name}.key\"",
     "build": "ng build",
     "buildprod":"ng build --configuration=production --aot --output-hashing=all",
-    "build:ssr": "ng run MusicEvent:server:dev",
+    "build:ssr": "ng run HealthMed:server:dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
