--- a/HealthMed.Web/ClientApp/service.yml
+++ b/HealthMed.Web/ClientApp/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-musicevent-service # Name of the service
+  name: frontend-healthmed-service # Name of the service
 spec:
   selector:
-    app: frontend-musicevent # Label selector to target pods with this label
+    app: frontend-healthmed # Label selector to target pods with this label
   ports:
     - protocol: TCP
       port: 80
