--- a/HealthMed.Web/ClientApp/package.json
+++ b/HealthMed.Web/ClientApp/package.json
@@ -15,37 +15,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.8",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@angular/platform-server": "^15.2.8",
-    "@angular/router": "^15.2.8",
+    "@angular/animations": "^16.1.7",
+    "@angular/cdk": "^16.1.6",
+    "@angular/common": "^16.1.7",
+    "@angular/compiler": "^16.1.7",
+    "@angular/core": "^16.1.7",
+    "@angular/forms": "^16.1.7",
+    "@angular/material": "^16.1.6",
+    "@angular/platform-browser": "^16.1.7",
+    "@angular/platform-browser-dynamic": "^16.1.7",
+    "@angular/platform-server": "^16.1.7",
+    "@angular/router": "^16.1.7",
+
     "@fortawesome/fontawesome-free": "^6.4.2",
+
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
-    "ngx-bootstrap": "^10.3.0",
-    "ngx-mask": "^15.2.1",
-    "ngx-spinner": "^15.0.1",
-    "ngx-toastr": "^16.2.0",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-mask": "^16.2.5",
+    "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^17.0.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.8.1",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "tslib": "^2.6.1",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^15.2.10",
-    "@angular/compiler-cli": "^15.2.8",
+    "@angular-devkit/build-angular": "^16.1.5",
+    "@angular/cli": "^16.1.5",
+    "@angular/compiler-cli": "^16.1.7",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
@@ -56,7 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "typescript": "~4.9.5"
+    "typescript": "^5.1.6"
   },
   "overrides": {
     "autoprefixer": "10.4.5",
