Paciente - Delete consulta

--- a/HealthMed.Web/ClientApp/package.json
+++ b/HealthMed.Web/ClientApp/package.json
@@ -41,7 +41,8 @@
     "run-script-os": "^1.1.6",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.1",
-    "zone.js": "~0.13.1"
+    "zone.js": "~0.13.1",
+    "sweetalert2": "11.4.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.5",
