--- a/HealthMed.Web/appsettings.Development.json
+++ b/HealthMed.Web/appsettings.Development.json
@@ -32,5 +32,8 @@
         }
       }
     ]
-  }
+  },
+  "Smtp": "smtp.gmail.com",
+  "SmtpUserName": "laercioqfranca93@gmail.com",
+  "SmtpPassword": "dtei lucz crnd tswb"
 }
