Testes unitários de senha

--- a/HealthMed.Test.UnitTest/HealthMed.Test.UnitTest.csproj
+++ b/HealthMed.Test.UnitTest/HealthMed.Test.UnitTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HealthMed.Domain\HealthMed.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
